# SimpleVirtualNetwork

./: .gitignore  Dockerfile  README.md  build.gradle.kts  build.sh  settings.gradle.kts
app/: Dockerfile  build.gradle.kts
app/src/androidTest/java/ru/valishin/simplevpn/: ExampleInstrumentedTest.kt
app/src/androidTest/java/ru/valishin/vpnoverhttps/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/valishin/simplevpn/: MainActivity.kt
app/src/main/java/ru/valishin/simplevpn/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/ru/valishin/vpnoverhttps/: MainActivity.kt
app/src/main/java/ru/valishin/vpnoverhttps/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/ru/valishin/simplevpn/: ExampleUnitTest.kt
app/src/test/java/ru/valishin/vpnoverhttps/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libexecvpnclient/: build.gradle.kts
libexecvpnclient/src/androidTest/java/ru/valishin/libexecvpnclient/: ExampleInstrumentedTest.kt
libexecvpnclient/src/main/cpp/: CMakeLists.txt  README.md  libexecvpnclient.cpp
libexecvpnclient/src/main/java/ru/valishin/libexecvpnclient/: NativeLib.kt
libexecvpnclient/src/test/java/ru/valishin/libexecvpnclient/: ExampleUnitTest.kt
nativevpn/: README  README.md  build.gradle.kts  deps.txt
nativevpn/src/androidTest/java/ru/valishin/nativevpn/: ExampleInstrumentedTest.kt
nativevpn/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.old  README.md  androidhelpers.c  global.h  helpers.c  helpers.h  nativevpn.c  nativevpn.h
nativevpn/src/main/cpp/cmake/modules/: CommonAndroidSetup.cmake  FindIconv.cmake  FindLibSodium.cmake  FindOpenSSL.cmake  Findlibsodium.cmake  download.cmake  hamcore_builder.cmake
nativevpn/src/main/cpp/include/: androidhelpers.h
nativevpn/src/main/java/ru/valishin/nativevpn/: NativeVpn.kt
nativevpn/src/test/java/ru/valishin/nativevpn/: ExampleUnitTest.kt
